Tests/test_output/Surfaces/test_graph_cc.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Unrecognized function or variable 'indices_notsurvived'.

Error in test_graph_cc (line 24)
new_adj_matrix(indices_notsurvived,:) = 0;
               ^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
